Module/Parsers/Grammar/Grammar.g3
grammar Grammar;

options 
{
    language=CSharp3;
    output=AST;
    TokenLabelType=CommonToken;
    ASTLabelType=AutomationTree;
}

tokens {FILE; SECTION;}

@lexer::header{using Automation.Core;}
@parser::header{using Automation.Core;}
@lexer::namespace{Automation.Core.Grammar}
@parser::namespace{Automation.Core.Grammar}

/*
 * Parser Rules
 */

public file
    : section+ EOF -> ^(FILE section+)
    ;

section
    : 'start' WORD* 'end' -> ^(SECTION WORD*)
    ;

/*
 * Lexer Rules
 */

WORD: 'a'..'z'+;

NEWLINE
    : '\r'? '\n' { $channel = Hidden; };

WS	: (' ' | '\t' | NEWLINE)+ { $channel = Hidden; };
